# Polkadot-Europe-ink-

./: .gitignore  README.md
ink!_smart_contracts/factory/: factory_teasury_manager.wasm
ink!_smart_contracts/oracle_dex/: oracle.wasm
ink!_smart_contracts/pallet/: pallet.wasm
ink!_smart_contracts/psp22/: metadata.json  my_psp22_token.wasm
ink!_smart_contracts/treasury_manager_smartPay/: treasury_manager.wasm
polkadot_europe/: Cargo.toml  lib.rs
polkadot_europe/contracts/factory_teasury_manager/: Cargo.toml  lib.rs
polkadot_europe/contracts/my_psp22_token/: Cargo.toml  lib.rs
polkadot_europe/contracts/oracle/: Cargo.toml  lib.rs
polkadot_europe/contracts/other_contract/: Cargo.toml  lib.rs
polkadot_europe/contracts/pallet/: Cargo.toml  lib.rs
polkadot_europe/contracts/treasury_manager/: Cargo.toml  README.md  lib.rs
polkadot_europe/traits/: factory.rs  mod.rs  oracle_dex.rs  tr_manager.rs
